k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flex-container-orchestrator
    logFormat: json
  name: flex-container-orchestrator
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: flex-container-orchestrator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flex-container-orchestrator
    spec:
      containers:
      - name: flex-container-orchestrator
        image: flex-container-orchestrator
        imagePullPolicy: Always
        readinessProbe:
          timeoutSeconds: 3
          initialDelaySeconds: 10
          periodSeconds: 15
          httpGet:
            path: "/flex-container-orchestrator/management/health/readiness"
            port: 8080
        livenessProbe:
          timeoutSeconds: 3
          initialDelaySeconds: 20
          periodSeconds: 20
          httpGet:
            path: "/flex-container-orchestrator/management/health/liveness"
            port: 8080
        ports:
          - containerPort: 8080
            protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 100Mi
          limits:
            cpu: "1"
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
