k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flex-container-orchestrator
  name: flex-container-orchestrator
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: flex-container-orchestrator
  type: ClusterIP
