k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: flex-container-orchestrator
  name: flex-container-orchestrator
spec:
  host: ""
  path: /
  to:
    kind: Service
    name: flex-container-orchestrator
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
status:
  ingress:
  - routerName: router
